# AGI-inc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  goal.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
apps/oracle/: pyproject.toml
apps/oracle/src/trust_oracle/: __init__.py  cli.py  config.py  main.py  scoring.py  worker.py
apps/oracle/tests/: test_api.py  test_scoring.py
apps/runtime/: pyproject.toml
apps/runtime/migrations/: env.py
apps/runtime/migrations/versions/: 20260710_0001_runtime_source_of_truth.py  20260710_0002_evaluation_ledger.py  20260710_0003_metric_link_index.py  20260710_0004_oracle_job_claims.py  20260710_0005_execution_start_time.py  20260710_0006_run_scoped_booking_uniqueness.py
apps/runtime/src/trust_runtime/: __init__.py  api.py  approvals.py  artifacts.py  browser.py  cli.py  config.py  effects.py  errors.py  eval_cli.py  evaluation_worker.py  fixtures.py  idempotency.py  main.py  orchestrator.py  policy.py  quotas.py  recovery.py  sandbox_bridge.py  sandbox_context.py  schemas.py  service.py  state_machine.py  telemetry.py  verification.py  worker.py
apps/runtime/src/trust_runtime/persistence/: __init__.py  database.py  errors.py  gateway.py  models.py  repositories.py  runtime_store.py
apps/runtime/tests/: conftest.py  test_api.py  test_artifacts.py  test_browser_e2e.py  test_browser_security.py  test_cli.py  test_contracts.py  test_cross_language_fixture.py  test_effects_policy_approvals.py  test_evaluation_worker.py  test_model_usage.py  test_orchestrator.py  test_persistence_postgres.py  test_persistence_schema.py  test_quotas.py  test_state_machine.py  test_telemetry.py  test_verification.py  test_worker.py
apps/sandbox/: README.md  package.json  tsconfig.json
apps/web/: next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
docs/: architecture.md  compliance-matrix.md  demo-script.md  evaluation.md  threat-model.md
docs/adr/: 001-trust-boundaries.md
evals/: README.md  __init__.py  reporting.py
evals/cases/: prompt-injection-corpus.v1.json
evals/evidence/: security-test-map.v1.json
evals/faults/: ambiguous-commit.v1.json  no-compliant-option.v1.json  price-drift.v1.json  prompt-injection.v1.json  (+1 more)
scripts/: __init__.py  build_eval_plans.py  compose.sh  durable_browser_probe.py  evaluation_report.py  performance_probe.py  security_audit.py
(+75 files in other folders)
