[project]
name = "trust-oracle"
version = "0.1.0"
description = "Sealed post-run evaluator for Trust Runtime."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "trust-runtime",
  "typer>=0.16,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
trust-oracle = "trust_oracle.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1,<2",
  "ruff>=0.12,<1",
]

[tool.uv.sources]
trust-runtime = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trust_oracle"]
